test/errors/syntax/undeclared_var_outside_for.yasl
for let x = 0; x < 5; x += 1 { };
echo x;
