test/errors/syntax/undeclared_var_outside_for.yasl.err
SyntaxError: Undeclared variable x (line 2).
